--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ContactsTest</string>
+    <string name="username">Username</string>
+    <string name="login">Login</string>
+    <string name="add_new_contact">Add new contact</string>
+    <string name="action_search">search</string>
 </resources>
