--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">Login</string>
     <string name="add_new_contact">Add new contact</string>
     <string name="action_search">search</string>
+    <string name="sign_out">Sign out</string>
 </resources>
